# Yukimura

./: Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-clippy.yml
src/: base.rs  fracs.rs  lib.rs  main.rs  printer.rs
src/float32/: abc.rs  mod.rs
src/float64/: abc.rs
src/math/: exponential.rs  mod.rs  quadratic.rs
src/physics/: mod.rs
