# --- Crate ---
[package]
name = "yukimura"
version = "0.1.0"
edition = "2021"
authors = ["Stridsvagn69420 (https://github.com/Stridsvagn69420)"]
description = "A program and library written in Rust for mathematical things I learned in Maths and Physics"
readme = "README.md"
repository = "https://github.com/Stridsvagn69420/Yukimura"
license = "eupl-1.2"
exclude = ["/target", "/.vscode/", "/.github/"]

[dependencies]
kagero = { version = "0.1.0", features = ["printer"] }

# --- Library ---
[lib]
name = "yukimura"
path = "src/lib.rs"

[features]
default = ["math", "physics", "quadratic"]
# Science Types
math = []
physics = []
# Algorithms
quadratic = ["math"]
# DEAD
fracs = []

# --- Binary ---
[[bin]]
name = "yukimura"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
debug = true
